log
Thu 23 Mar 2023 03:29:26 PM UTC: 
 tests:  0|6
total_score: 0/70
6fd4927
Thu 23 Mar 2023 03:55:03 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
58071e0
Sun 26 Mar 2023 02:10:31 PM UTC: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:52:5: error: expected identifier or ‘(’ before ‘return’
   52 |     return NULL;
      |     ^~~~~~
list.c:53:1: error: expected identifier or ‘(’ before ‘}’ token
   53 | }
      | ^
Compilation failed
64a93a7
Sun 26 Mar 2023 02:10:46 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|5
total_score: 15/70
92e2e4a
Sun 26 Mar 2023 02:12:20 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
9054586
Sun 26 Mar 2023 02:13:29 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
9372aeb
Sun 26 Mar 2023 02:14:43 PM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
c20e715
Sun 26 Mar 2023 02:16:10 PM UTC: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
341fc5e
